# smart_cards_agent

./: .dockerignore  Dockerfile  pyproject.toml
src/app/: main.py
src/app/interface/fastapi/: server.py
src/app/middleware/: hmac.py
src/app/setup/: app_startup.py
src/core/dependencies/: container.py  repositories.py
src/core/domain/entities/: smart_card.py
src/core/domain/exceptions/: repository.py
src/core/domain/models/: session_state.py
src/core/domain/repositories/: session.py
src/core/infrastructure/redis/: session_repository.py
src/features/bios/interface/fastapi/: bios_routes.py
src/features/cards/dependencies/: services.py
src/features/cards/domain/entities/: smart_card.py
src/features/files/dependencies/: services.py
src/features/files/services/: sheets_service.py
src/features/llm/dependencies/: agents.py  services.py  use_cases.py
src/features/websocket/: connections.py
src/interface/fastapi/: server.py
src/interface/fastapi/routes/: bios.py  cards.py
src/interface/fastapi/schemas/: responses.py
src/llm/application/agents/: bio_generator.py  card_parser.py  generate_bio.py
src/llm/application/services/: prompt_service.py
src/llm/application/use_cases/: rows_to_cards.py
src/llm/dependencies/: agents.py  services.py  use_cases.py
src/llm/infrastructure/langchain/: llm_service.py
src/shared/dependencies/: container.py  repositories.py  services.py
src/shared/domain/exceptions/: dependencies.py
src/shared/services/: ws_transport.py
src/shared/utils/decorators/: error_handler.py
(+10 files in other folders)
