[project]
name = "agent-smartcards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.121.3",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pyjwt>=2.10.1",
    "qdrant-client>=1.16.0",
    "redis>=7.0.1",
    "tiktoken>=0.12.0",
    "uvicorn>=0.38.0",
]
